---
config:
  layout: dagre
---
classDiagram
direction TB
    class User {
	    +userId: int
	    +name: String
	    +email: String
	    +location: String
	    +rating: double
	    +login()
	    +logout()
    }
    class Rider {
		+paymentMethod: String
		+rideHistory: List
		+rateDriver()
	    +bookSeat()
    }
    class Driver {
	    +licenseNumber: String
	    +vehicleInfo: String
	    +postRide()
    }
    class Rating {
	    +ratingId: int
	    +score: int
	    +comment: String
	    +submitRating()
    }
    class Booking {
	    +bookingId: int
	    +seatCount: int
	    +confirmBooking()
	    +cancelBooking()
    }
    class Payment {
	    +paymentId: int
	    +amount: double
	    +splitCost()
    }
    class Notification {
	    +notificationId: int
	    +message: String
	    +sendNotification()
    }
    class Ride {
	    +rideId: int
	    +pickupPoint: String
	    +destination: String
	    +time: DateTime
	    +totalCost: double
	    +availableSeats: int
	    +updateSeats()
    }
    User <|-- Driver
    User <|-- Rider
    Driver "1" --> "0..*" Ride : posts >
    Rider "1" --> "0..*" Booking : makes >
    Ride "1" --> "0..*" Booking : contains >
    Booking "1" --> "1" Payment : includes >
    Ride "1" --> "0..*" Notification : triggers >
    Rider "1" --> "0..*" Rating : gives >
    Rating "1" --> "0..*" User : receives >
